Add Maven Central release workflows and Java 11 compatibility
Agent-Logs-Url: https://github.com/lemon-ant/JHarmonizer/sessions/cb218806-aa3e-4712-a6a4-628c16f95987

Co-authored-by: AntonLem <2189039+AntonLem@users.noreply.github.com>