@@ -1,5 +1,7 @@
 package io.github.lemon_ant.jharmonizer.core;
 
+import static java.util.stream.Collectors.toUnmodifiableList;
+
 import io.github.lemon_ant.jharmonizer.core.flow.FlowType;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -69,8 +71,8 @@ class StartupBannerRenderer {
         List<String> sortedGlobs = globs.stream()
                 .map(StartupBannerRenderer::normalizeGlobSeparators)
                 .sorted()
-                .toList();
-        lines.add(renderRow(label, sortedGlobs.getFirst()));
+                .collect(toUnmodifiableList());
+        lines.add(renderRow(label, sortedGlobs.get(0)));
         for (int globIndex = 1; globIndex < sortedGlobs.size(); globIndex++) {
             lines.add(GLOB_CONTINUATION_INDENT + sortedGlobs.get(globIndex));
         }
